# raspberry-pi-tester

./: .env  README.md  button_checker.py  camera_stream.py  main.py  pir_analyzer.py  pyproject.toml  relay_control.py
lib/: lcd_i2c.py  tm1637.py
tests/: test_camera.py  test_lcd.py  test_pir.py  test_relay.py  test_tm1637.py
